--- a/MDK-ARM/Template_Linux/Template_Linux.build_log.htm
+++ b/MDK-ARM/Template_Linux/Template_Linux.build_log.htm
@@ -27,40 +27,35 @@ Project File Date:  08/06/2024
 <h2>Output:</h2>
 *** Using Compiler 'V6.18', folder: 'D:\Program Files\ARM Keil\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'Template_Linux'
-compiling startup_main.cpp...
 assembling startup_stm32f103xb.s...
-compiling stm32f1xx_hal_tim_ex.c...
-compiling gpio.c...
 compiling dma.c...
-compiling stm32f1xx_it.c...
-compiling stm32f1xx_hal_msp.c...
-compiling stm32f1xx_hal_tim.c...
 compiling stm32f1xx_hal_gpio_ex.c...
-compiling usart.c...
+compiling stm32f1xx_hal_msp.c...
+compiling stm32f1xx_it.c...
+compiling gpio.c...
+compiling stm32f1xx_hal_tim.c...
+compiling startup_main.cpp...
+compiling stm32f1xx_hal_tim_ex.c...
 compiling main.c...
-compiling stm32f1xx_hal_rcc_ex.c...
+compiling usart.c...
 compiling stm32f1xx_hal.c...
-compiling stm32f1xx_hal_pwr.c...
-compiling stm32f1xx_hal_exti.c...
-compiling stm32f1xx_hal_flash.c...
+compiling stm32f1xx_hal_rcc_ex.c...
 compiling stm32f1xx_hal_gpio.c...
-compiling stm32f1xx_hal_flash_ex.c...
-compiling stm32f1xx_hal_cortex.c...
-compiling stm32f1xx_hal_dma.c...
+compiling stm32f1xx_hal_exti.c...
+compiling stm32f1xx_hal_pwr.c...
+compiling stm32f1xx_hal_flash.c...
 compiling stm32f1xx_hal_rcc.c...
+compiling stm32f1xx_hal_cortex.c...
+compiling stm32f1xx_hal_flash_ex.c...
+compiling stm32f1xx_hal_dma.c...
 compiling system_stm32f1xx.c...
-../applications/Src/udb.cpp(1): warning: In file included from...
-../applications/Inc\udb.h(55): error: call to implicitly-deleted default constructor of 'class UDB'
-}udb;
- ^
-../applications/Inc\udb.h(41): note: default constructor of 'UDB' is implicitly deleted because field 'rx' has no default constructor
-        RX rx;
-           ^
-1 error generated.
 compiling udb.cpp...
 compiling bsp_delay.cpp...
 compiling stm32f1xx_hal_uart.c...
-"Template_Linux\Template_Linux.axf" - 1 Error(s), 0 Warning(s).
+linking...
+Program Size: Code=6182 RO-data=310 RW-data=12 ZI-data=1868  
+FromELF: creating hex file...
+"Template_Linux\Template_Linux.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -84,8 +79,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Target not created.
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
